Support location-local planner times
